[package]
name = "rtap-consts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro-bits = "0.1.3"
proc-macro2 = "1.0.69"
scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "fixed-array-impl" }
