[package]
name = "rtap"
version = "0.1.0"
edition = "2021"

[dependencies]
bin-utils = { version = "0.2.5" }
macro-bits = "0.1.2"
no-panic = "0.1.26"
thiserror = "1.0.49"
try_take = "0.1.0"
# rtap-macros = { path="../rtap-macros" }
rtap-consts = { path="../rtap-consts" }
scroll = { git = "https://github.com/Frostie314159/scroll.git", branch = "fixed-array-impl" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "iter"
harness = false
