[package]
name = "rtap"
version = "0.1.0"
edition = "2021"

[dependencies]
bin-utils = { version = "0.2.5" }
macro-bits = "0.1.2"
no-panic = "0.1.26"
thiserror = "1.0.49"
try_take = "0.1.0"
# rtap-macros = { path="../rtap-macros" }
rtap-consts = { path="../rtap-consts" }
scroll = { version = "0.12.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "iter"
harness = false
